v1.12.x/index.mdx
---
title: "OpenMetadata Documentation"
description: "Unified platform for data discovery, lineage, and governance"
mode: "custom"
---

import { Integrations } from "/snippets/v1.12.x/components/ConnectorGrid/Integration.jsx"

<div className="homepage-container">

<div className="banner-content">

<h1 className="page-header">
  Unlock the <span id="header-highlight">Power</span> of Metadata
</h1>

<p className="page-description">
  Start with OpenMetadata and learn how to document, discover, and govern your data assets end-to-end.
</p>

<div className="search-container">
<input
  type="text"
  id="homepage-search"
  className="homepage-search-input"
  placeholder=" |   Search for connectors, how to guides and more"
  onClick={() => {
    const searchBar = document.getElementById('search-bar-entry');
    if (searchBar) {
      searchBar.click();
    }
  }}
  onFocus={() => {
    const searchBar = document.getElementById('search-bar-entry');
    if (searchBar) {
      searchBar.click();
    }
  }}
  readOnly
/>
<button
 type="button"
  className="ask-ai-icon-button"
  onMouseDown={(e) => {
    e.stopPropagation();
    e.preventDefault();
  }}
  onClick={(e) => {
    e.stopPropagation();
    e.preventDefault();
    // Trigger the assistant using keyboard shortcut (Cmd+I / Ctrl+I)
    const event = new KeyboardEvent('keydown', {
      key: 'i',
      code: 'KeyI',
      keyCode: 73,
      which: 73,
      ctrlKey: !navigator.platform.includes('Mac'),
      metaKey: navigator.platform.includes('Mac'),
      bubbles: true,
      cancelable: true
    });
    document.dispatchEvent(event);
  }}
  aria-label="Toggle assistant panel"
>
<Icon icon="/public/images/icons/ask-ai-home.svg" className="ask-ai-icon" />
</button>
<span className="search-shortcut">⌘K</span>
</div>

<div className="chips">

<a href="/v1.12.x/connectors/database/databricks" className="chip purple">
  <Icon icon="/public/images/connectors/databrick.webp" color="#6938EF" /> <span>Databricks</span>
</a>

<a href="/v1.12.x/connectors/database/bigquery" className="chip purple">
  <Icon icon="/public/images/connectors/bigquery.webp" color="#6938EF" /> <span>BigQuery</span>
</a>

<a href="/v1.12.x/connectors/database/redshift" className="chip purple">
  <Icon icon="/public/images/connectors/redshift.webp" color="#6938EF" /> <span>Redshift</span>
</a>

<a href="/v1.12.x/connectors/database/snowflake" className="chip purple">
  <Icon icon="/public/images/connectors/snowflakes.webp" color="#6938EF" /> <span>Snowflake</span>
</a>
<a href="/v1.12.x/how-to-guides/mcp" className="chip purple">
  <Icon icon="/public/images/icons/mcp.svg" color="#6938EF" /> <span>MCP</span>
</a>

<a href="/v1.12.x/sdk/ai-sdk" className="chip purple">
  <Icon icon="/public/images/homepage-icons/ai-sdk2.svg" color="#6938EF" /> <span>AI SDK</span>
</a>

</div>

</div>

<div className="deployment">

<div className="chip header">Deployment</div>

<h2 className="guide-header">Get Started with OpenMetadata</h2>

<p className="page-description header-description">
 Choose how you want to deploy and use OpenMetadata based on your needs.
</p>

<div className="deployment-cards">

<div>

<div className="deployment-top">
Best for: PoC, exploration
</div>

<div className="deployment-card">

<img noZoom src="/public/images/homepage-icons/quick-start-color.svg" alt="Quick Start" />
<h3>Quick Start</h3>
<p>Try OpenMetadata quickly using a hosted sandbox or local Docker setup to explore features with minimal effort.</p>
<a className="read-more" href="/v1.12.x/quick-start">
    <span>Read More</span>
    <img noZoom src="/public/images/homepage-icons/right-arrow.svg" alt="Right Arrow" />
  </a>

</div>

</div>

<div>

<div className="deployment-top">
Best for: Teams, orgs
</div>

<div className="deployment-card">

<img noZoom src="/public/images/homepage-icons/production-color.svg" alt="Production" />
<h3>Production</h3>
<p>Deploy OpenMetadata securely at scale using Kubernetes, cloud-managed services, or bare metal for production workloads.</p>
<a className="read-more" href="/v1.12.x/deployment">
    <span>Read More</span>
    <img noZoom src="/public/images/homepage-icons/right-arrow.svg" alt="Right Arrow" />
  </a>

</div>

</div>

<div>

<div className="deployment-top">
Best for: Existing users
</div>

<div className="deployment-card">

<img noZoom src="/public/images/homepage-icons/upgrade-color.svg" alt="Upgrade" />
<h3>Upgrade</h3>
<p>Upgrade your OpenMetadata deployment to the latest supported minor version with compatibility checks and safe rollback options.</p>
<a className="read-more" href="/v1.12.x/deployment/upgrade">
    <span>Read More</span>
    <img noZoom src="/public/images/homepage-icons/right-arrow.svg" alt="Right Arrow" />
  </a>

</div>

</div>

</div>

</div>

<div className="collate-om">

<div className="best-enterprise">
Best for: Enterprises, zero-ops teams
</div>

<div className="collate-managed">

<div className="collate-content">

<div>
<img noZoom src="/public/images/homepage-icons/collate.svg" alt="Collate" className="collate-logo" />
</div>

<div>
<h3>Collate (Managed OpenMetadata)</h3>
<p>Use Collate’s fully managed OpenMetadata platform with built-in AI to enable faster data discovery and collaboration without managing infrastructure, upgrades, or security.</p>
</div>

<div className="explore-collate">
<a href="https://getcollate.io/" target="_blank">Explore Collate</a>
</div>

</div>

</div>

</div>

<div className="guides">

<div className="chip header">How-to Guides</div>

<h2 className="guide-header">Quick Setup Guides</h2>

<p className="page-description header-description">
  Dive into our library of guides to master OpenMetadata's features.
</p>

<div className="guide-list">

<a href="/v1.12.x/how-to-guides/data-discovery" className="guide-card">
  <Icon icon="/public/images/homepage-icons/discovery.svg" />
  <div>Discovery</div>
</a>

<a href="/v1.12.x/how-to-guides/data-lineage" className="guide-card">
  <Icon icon="/public/images/homepage-icons/lineage.svg" />
  <div>Lineage</div>
</a>

<a href="/v1.12.x/how-to-guides/data-quality-observability" className="guide-card">
  <Icon icon="/public/images/homepage-icons/observability.svg" />
  <div>Observability</div>
</a>

<a href="/v1.12.x/how-to-guides/data-insights" className="guide-card">
  <Icon icon="/public/images/homepage-icons/insights.svg" />
  <div>Insights</div>
</a>

<a href="/v1.12.x/how-to-guides/data-contracts" className="guide-card">
  <Icon icon="/public/images/homepage-icons/contract.svg" />
  <div>Data Contract</div>
</a>

<a href="/v1.12.x/how-to-guides/data-governance" className="guide-card">
  <Icon icon="/public/images/homepage-icons/governance.svg" />
  <div>Governance</div>
</a>

<a href="/v1.12.x/connectors" className="guide-card">
  <Icon icon="/public/images/homepage-icons/connectors.svg" />
  <div>Connectors</div>
</a>

</div>

<div className="see-all">
<a href="/v1.12.x/how-to-guides">See All</a>
</div>

</div>

<div className="connectors">

<div className="chip header">Connectors</div>

<h2 className="guide-header">Seamless Data Integrations</h2>

<p className="page-description header-description">
  Integrate diverse data sources with OpenMetadata.
</p>

<Integrations />

</div>

<div className="highlights">

<div className="chip header">Highlights</div>

<h2 className="guide-header">What’s New in OpenMetadata</h2>

<p className="page-description header-description">
  Stay up to date with the latest features, enhancements, and platform updates in OpenMetadata.
</p>

<div className="highlight-cards">

<div className="highlight-card">
  <img noZoom src="/public/images/homepage-icons/ai-sdk.svg" alt="Dimensional Validation" className="icon" />
  <div className="highlight-header">AI SDK</div>
  <p>Build and embed custom AI agents with programmatic access to Collate and OpenMetadata through MCP tools across Python, TypeScript, Java, and CLI.</p>
  <a className="read-more" href="/v1.12.x/sdk/ai-sdk">
    <span>Read More</span>
    <img noZoom src="/public/images/homepage-icons/right-arrow.svg" alt="Right Arrow" />
  </a>
</div>

<div className="highlight-card">
  <img noZoom src="/public/images/homepage-icons/dimension.svg" alt="Dimensional Validation" className="icon" />
  <div className="highlight-header">Dimensional Validation</div>
  <p>Validate data quality across key dimensions such as completeness, accuracy, consistency, and timeliness.</p>
  <a className="read-more" href="/v1.12.x/how-to-guides/data-quality-observability/quality/dimensional-validation">
    <span>Read More</span>
    <img noZoom src="/public/images/homepage-icons/right-arrow.svg" alt="Right Arrow" />
  </a>
</div>

<div className="highlight-card">
  <Icon icon="/public/images/homepage-icons/dq.svg" />
  <div className="highlight-header">Data Quality as Code</div>
  <p>Manage data quality checks using version-controlled configurations.</p>
  <a className="read-more" href="/v1.12.x/how-to-guides/data-quality-observability/quality/data-quality-as-code">
    <span>Read More</span>
    <img noZoom src="/public/images/homepage-icons/right-arrow.svg" alt="Right Arrow" />
  </a>
</div>

<div className="highlight-card">
  <Icon icon="/public/images/homepage-icons/custom-properties.svg" />
  <div className="highlight-header">Collate vs OSS</div>
  <p>Understand the feature difference between Collate Vs OpenMetadata</p>
  <a className="read-more" href="https://www.getcollate.io/comparison" target="_blank">
    <span>Read More</span>
    <img noZoom src="/public/images/homepage-icons/right-arrow.svg" alt="Right Arrow" />
  </a>
</div>

</div>

</div>

<div className="quick-links">

<div className="chip header">Quick Links</div>

<h2 className="guide-header">Trending Quick Links</h2>

<p className="page-description header-description">
  Explore the most popular resources and links, handpicked by the OpenMetadata community.
</p>

<div className="links">

<div>
<div className="link-header">
<Icon icon="list" color="#414651" size={20} />
<h3>Core Features</h3>
</div>

<div className="link-list">
<a href="/v1.12.x/sdk/ai-sdk">AI SDK</a>
<a href="/v1.12.x/how-to-guides/mcp">MCP Server</a>
<a href="/v1.12.x/how-to-guides/data-contracts">Data Contracts</a>
<a href="/v1.12.x/how-to-guides/data-quality-observability/quality/data-quality-as-code">Data Quality as Code</a>
<a href="/v1.12.x/how-to-guides/data-quality-observability/quality/dimensional-validation">Dimensional Validation</a>
</div>
</div>

<div>
<div className="link-header">
<Icon icon="book-open" color="#414651" size={20} />
<h3>Blogs & Articles</h3>
</div>

<div className="link-list">
<a href="https://blog.open-metadata.org/real-time-metadata-ingestion-apis-vs-kafka-explained-82f41ae09b9e" target="_blank">Real-time Metadata Ingestion</a>
<a href="https://blog.open-metadata.org/2026-predictions-why-semantics-will-determine-ai-success-968f7a5397d5" target="_blank">2026 Predictions</a>
<a href="https://blog.open-metadata.org/announcing-our-first-openmetadata-goose-recipe-67d9249c2fd3" target="_blank">Announcing our first OpenMetadata goose Recipe</a>
<a href="https://blog.open-metadata.org/openmetadata-at-enterprise-scale-supporting-millions-of-data-assets-relations-b391e5c90c69" target="_blank">OpenMetadata at Enterprise Scale</a>
</div>
</div>

<div>
<div className="link-header">
<Icon icon="note" color="#414651" size={20} />
<h3>Release Note</h3>
</div>

<div className="link-list">
<a href="https://www.open-metadata.org/product-updates#v1.12.0" target="_blank">Release v1.12</a>
<a href="https://www.open-metadata.org/product-updates#v1.10.0" target="_blank">Release v1.10</a>
<a href="https://www.open-metadata.org/product-updates#v1.9.0" target="_blank">Release v1.9</a>
<a href="https://www.open-metadata.org/product-updates#v1.8.0" target="_blank">Release v1.8</a>
</div>
</div>

</div>

</div>

<div className="collate-video">

<div className="video-content">

<div>
<div className="video-chip">
<span className='product-demo'>Product Demo</span>
<span>77 min watch</span>
</div>
<h2 className="guide-header video-header">
See Collate in Action
</h2>
<p className="video-description">
Want a quick overview? Take a quick tour - watch our detailed demo to learn how Collate works.
</p>
</div>

<div className="video-container">
<iframe
  className="video"
  src="https://www.youtube.com/embed/vwX69ZrknmI?si=W0wV8RvuTcdXf8El"
  title="YouTube video player"
  allowFullScreen
></iframe>
</div>

</div>

</div>

<div className="external-links">

<div className="explore-container">

<div>
<h3 className="explore-header">Explore More</h3>
<p className="explore-desc">Learn more about OpenMetadata</p>
</div>

<div className="explore-items">

<a className="explore-card" href="https://slack.open-metadata.org" target="_blank">
<div className="explore-card-header">
<img noZoom src='/public/images/icons/slack.svg' alt="Slack" className="slack-icon" />
<div>Community</div>
</div>
<p>Join our Slack community for instant support and updates.</p>
</a>

<a className="explore-card" href="https://blog.open-metadata.org/" target="_blank">
<div className="explore-card-header">
<img noZoom src='/public/images/homepage-icons/blog.svg' alt="Blog" />
<div>Blogs</div>
</div>
<p>Get to know more about what’s new in data cataloging.</p>
</a>

<a className="explore-card" href="https://www.youtube.com/c/OpenMetadataChannel" target="_blank">
<div className="explore-card-header">
<img noZoom src='/public/images/homepage-icons/youtube.svg' alt="Youtube" />
<div>Videos</div>
</div>
<p>Explore data analytics with quick and interesting lessons.</p>
</a>

</div>

</div>

</div>

<div className="home-footer">

<div className="collate-tm">©2026 OpenMetadata. All rights reserved.</div>

<div className="home-footer-social">
<a className="social-link" href="https://github.com/open-metadata/OpenMetadata" target="_blank"><Icon icon="github" size={20} /></a>
<a className="social-link" href="https://www.youtube.com/c/OpenMetadataChannel" target="_blank"><Icon icon="youtube" size={20} /></a>
<a className="social-link" href="https://twitter.com/open_metadata" target="_blank"><Icon icon="x-twitter" size={20} /></a>
</div>

</div>

</div>
